Add ChefConf blog entry

--- a/_posts/2017-06-02-chefconf2017.md
+++ b/_posts/2017-06-02-chefconf2017.md
@@ -3,7 +3,7 @@ layout: post
 title: "ChefConf 2017"
 tags: [chef]
 comments : true
-bigimg: https://zkrggq-db3pap001.files.1drv.com/y4myHiPlEmxUGmqk1u6yQ6TvbUGootuxVovfJvSEBjpSqQVLxws9y5OPGnIZM2wNtaGOguwumCvkop7_b-jMlHgbAn8nFBCpS1dhLvLKDdnyGtNaOVKu9CMMIa66D5e9OiU9vcmHuNzFYyi7ZzBtRMdIPgg8UpxMcuuQuJVc1MZkT_GxZOzB5jMPnvCkI1k0lT-RIz-sR9Px4gfM6eHb17g-w?width=1280&height=960&cropmode=none
+bigimg: /img/chef-conf.jpg
 ---
 ### My notes from the conference
 
